--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1",
-    "react-trello": "^2.1.3"
+    "react-trello": "^2.1.3",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
