--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.8.1",
     "react-scripts": "^3.0.1",
     "react-trello": "^2.1.3",
     "styled-components": "^4.2.0"
